--- a/style.css
+++ b/style.css
@@ -4,5 +4,5 @@ body {
   text-align: center;
 }
 html{
-background-image: url("https://kienit.com/wp-content/uploads/2021/12/hinh-nen-powerpoint-hoc-tap-59.jpg");
+background-image: url("https://giaiphapexcel.net/wp-content/uploads/2021/12/hinh-nen-bai-giang-powerpoint-hoc-tap_093920895.jpg");
 }
