--- a/style.css
+++ b/style.css
@@ -32,5 +32,10 @@ ul li a:hover{
 }
 .logo img{
     float: left;
-    width: ;
+    width: 150px;
+    height: auto;
+}
+.main{
+    max-width: 1200px;
+    margin: auto;
 }
