--- a/style.css
+++ b/style.css
@@ -3,8 +3,13 @@
     padding: 0;
     font-family: century Gothic;
 }
+
+body {
+    background-image: url("abx.jpg");
+}
+
 header{
-    background: url("https://topchiase24h.com/wp-content/uploads/2021/03/Hinh-nen-4K-26.jpg");
+    background-image: url("abx.jpg");
     height: 100vh;
     background-size: cover;
     background-position: center;
