--- a/style.css
+++ b/style.css
@@ -5,14 +5,21 @@
 }
 
 body {
-    background-image: url("abx.jpg");
+    background-image: url("duy.jpg");
 }
 
 header{
-    background-image: url("abx.jpg");
-    height: 100vh;
+    background-image: url("duy.jpg");
+    /* height: 100vh; */
     background-size: cover;
     background-position: center;
+}
+
+h1 {
+    position: relative;
+    top: 120px;
+    left: 40%;
+    font-size: 80px;
 }
 
 ul{
@@ -43,4 +50,45 @@ ul li a:hover{
 .main{
     max-width: 1200px;
     margin: auto;
+}
+
+
+
+thanh tìm kiếm**
+body{
+    margin: 0;
+    padding: 0;
+}
+.search-text{
+    position: relative;
+    top: 200px;
+    width: 50%;
+    height: 40px;
+    background-color: white;
+    border: 1px solid gray;
+    border-radius: 30px;
+    margin-left: 20px;
+    margin: 0 auto;
+    
+}
+.search-text input{
+    height: 40px;
+    width: 80%;
+    border: none;    /* padding-left: 10px; */
+}
+.search-btn{
+    position: relative;
+    background-color: rgb(0, 132, 255);
+    float: right;
+    width: 15%;
+    height: 40px;
+    line-height: 38px;
+    border-radius: 0 20px 20px 0;
+    
+}
+.search-text input:focus, .search-text input:active,.search-text input{
+    outline: 0;
+    outline-style: none;
+    outline-width: 0;
+    border-radius: 20px 0 0 20px;
 }
